<resources>
  <!--  <string name="app_name">锦业运维</string>-->
<!--    <string name="app_name">锦业运维测试</string>-->
    <string name="str_hint_phone">请输入账号</string>
    <string name="str_hint_password">请输入密码</string>
    <string name="please_login">请重新登录</string>
    <string name="network_address_error">网址有误</string>
    <string name="service_error">服务器出错</string>
    <string name="network_bad">网络状况不太好</string>
    <string name="home">运营</string>
    <string name="password_error">用户名或密码错误</string>
    <string name="str_role">数据查看员</string>
    <string name="me">我</string>
    <string name="name">名字</string>
    <string name="role">系统角色</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="change">修改</string>
    <string name="setting">设置</string>
    <string name="changephone">更换手机号</string>
    <string name="please_input_correct_phone">请输入11位中国大陆号码</string>
    <string name="change_phone_success">修改电话号成功</string>
    <string name="change_password">修改密码</string>
    <string name="old_password_error">原密码错误</string>
    <string name="change_password_success">密码修改成功</string>
    <string name="setting_notify">在“设置-通知中心”中进行修改</string>
    <string name="notify_method">接收到新消息后的提示方式</string>
    <string name="about_detail" >【运维APP】是杭州锦业科技运维管理系统的移动客户端。后者是杭州锦业科技有限公司用于管理运维人员和咖啡机网点，协调物料配置，开展市场活动，保障整个咖啡机生态系统正常运行的公司内部管理系统。</string>
    <string name="about_operation">关于锦业运维</string>
    <string name="version">运维系统</string>
    <string name="data_statistics">数据统计</string>
    <string name="daily_sale_list">当天销售榜</string>
    <string name="select_machine">选择咖啡机</string>
    <string name="sale_table">销售统计表</string>
    <string name="daily_sale">每日订单</string>
    <string name="daily_order">每日订单数</string>
    <string name="daily_sale_amout">每日销售金额</string>
    <string name="twentyfour_sale">24小时销售图</string>
    <string name="feed_overview">加料总览</string>
    <string name="waste_material">物料消耗</string>
    <string name="error_list">历史故障</string>
    <string name="original_price">"原    价：%s元"</string>
    <string name="now_price">"现        价：%s元"</string>
    <string name="weixin_price">"微信价：%s元"</string>
    <string name="ali_price">"支付宝价：%s元"</string>
    <string name="volume">"体    积： %sml"</string>
   <string name="discount">"全场%s折"</string>
   <string name="money_off">"全场满%1$s减%2$s"</string>
    <string name="login_in">咖啡机登录</string>
    <string name="error_history">历史故障</string>
    <string name="machine_info">咖啡机信息</string>
    <string name="polling">巡检</string>
    <string name="login_out">咖啡机登出</string>
    <string name="menu_control">操作菜单</string>
    <string name="done">完成</string>
    <string name="confirm">确认提交</string>
    <string name="my_release_task">我发布的任务</string>
    <string name="task_remain_handle">待处理任务</string>
    <string name="task_handled">已处理任务</string>
    <string name="choose_photo_limit_out">最多选择9张图片</string>
    <string name="add_comment">添加评论</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="click_add_comment">点击添加评论</string>
    <string name="about_picture">点击图片查看大图，点击删除按钮可删除已选择图片</string>
    <string name="task_type">任务类型</string>
    <string name="fix_task">维修任务</string>
    <string name="principal">负责人</string>
    <string name="new_task">新建任务</string>
    <string name="restore">保存</string>
    <string name="feed_task">加料任务</string>
    <string name="other_task">其他任务</string>
    <string name="remove">移除</string>
    <string name="please_select_machine">请先选择一台咖啡机</string>
    <string name="new_task_success">新建任务成功</string>
    <string name="please_check_machine">请选择咖啡机</string>
    <string name="unfinish">待处理</string>
    <string name="finished">已完成</string>
    <string name="search_my_release_task">查找我发布的任务</string>
    <string name="search_task_remain_handle">查找待处理的任务</string>
    <string name="search_task_handled">查找已完成的任务</string>
    <string name="finish_task">完成任务</string>
    <string name="task_detail">任务详情</string>
    <string name="task_remain">待处理</string>
    <string name="task_has_handled">已处理</string>
    <string name="add_comment_success">添加评论成功</string>
    <string name="add_comment_failed">添加评论失败</string>
    <string name="change_unHandler">将任务标记为未完成</string>
    <string name="change_finish">将任务标记为已完成</string>
    <string name="creat_task">创建了一个新任务：</string>
    <string name="finish_tag">改为已完成</string>
    <string name="unfinish_tag">改为未完成</string>
    <string name="change_state_success">修改任务状态成功</string>
    <string name="change_state_failed">修改任务状态失败</string>
    <string name="my_release_task_empty">您还没有发布过任务~</string>
    <string name="remain_empty">您没有待处理的任务~</string>
    <string name="finish_task_empty">您还没有已处理的任务~</string>
    <string name="check_task_isnot_usable">该功能尚未开启</string>
    <string name="polling_is_disable">巡检功能尚未开启</string>
    <string name="ok">确定</string>
    <string name="change_machine">更换咖啡机</string>
    <string name="str_ignore">忽略</string>
    <string name="str_update">更新</string>
    <string name="please_install_baidumap">请先安装百度地图</string>
    <string name="search_task">查找任务</string>
    <string name="scan_error">扫描失败</string>
    <string name="today_error">当天故障</string>
    <string name="login">已登录</string>
    <string name="polling_success">巡检提交成功</string>
   <string name="daily_order_orgin">每日订单来源</string>
   <string name="weekly_sale_data">一周销售数据</string>
   <string name="daily_order_source">每日订单来源</string>
   <string name="order_week_sale">一周销售数据</string>
   <string name="repeat_buy">用户重复消费数据</string>
   <string name="sugar_ratio">饮品含糖量</string>
   <string name="drink_ratio">饮品购买比例</string>
    <string name="please_install_gaodemap">请先安装高德地图</string>
    <string name="change_time_success">修改截止时间成功</string>
    <string name="change_time_failed">修改截止时间失败</string>
    <string name="change_finish_time" >将截止时间修改到%s</string>
    <string name="machine_comment">用户评价</string>
    <string name="person_add_change" >将%s添加到负责人列表</string>
    <string name="person_dis_change" >将%s从负责人列表移除</string>
    <string name="change_person_success">修改联系人成功</string>
    <string name="change_person_failed">修改联系人失败</string>
    <string name="cannot_remove">请至少保留一个联系人</string>
    <string name="comment_bar">%1$d单\n%2$d</string>
</resources>
