<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/color_little_grey"
    android:layout_height="match_parent">
<include layout="@layout/titlebar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/ll_more_task_type"
        android:background="@color/standard_white"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp">
        <TextView
            android:text="@string/task_type"
            android:textSize="15sp"
            android:textColor="@color/heavy_grey"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tv_task_type"
            android:text="@string/fix_task"
            android:textSize="14sp"
            android:textColor="@color/standard_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="12dp"
            android:src="@drawable/icon_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_select_machines"
        android:background="@color/standard_white"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp">
        <TextView
            android:text="选择一台咖啡机"
            android:textSize="15sp"
            android:textColor="@color/heavy_grey"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tv_add_machine"
            android:text="选择咖啡机"
            android:textSize="14sp"
            android:textColor="@color/standard_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="12dp"
            android:src="@drawable/icon_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_machine_info"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="@color/standard_white"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/tv_task_code"
                android:text="咖啡机编号：test0001"
                style="@style/detail_message_left_textView" />
            <TextView
                android:id="@+id/tv_task_group"
                android:text="促销分组： 3.16"
                style="@style/detail_message_right_textView"/>
        </RelativeLayout>
        <include layout="@layout/item_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="11.5dp"/>
        <RelativeLayout
            android:background="@color/standard_white"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/tv_task_menu"
                android:text="菜单：锦业"
                style="@style/detail_message_left_textView" />
            <TextView
                android:id="@+id/tv_task_version"
                android:text="当前版本：4.2.2"
                style="@style/detail_message_right_textView"/>
        </RelativeLayout>
        <include layout="@layout/item_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="11.5dp"/>
        <RelativeLayout
            android:background="@color/standard_white"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="64.5dp">
            <TextView
                android:text="地址:"
                style="@style/detail_message_left_textView" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/standard_grey"
                android:layout_marginLeft="50dp"
                android:id="@+id/tv_task_location"
                android:singleLine="false"
                android:text="浙江省杭州市加快了电视剧发了就安静地方了看见俺放假阿道夫阿凡达"
                style="@style/detail_message_left_textView"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_more_person"
        android:background="@color/standard_white"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp">
        <TextView
            android:text="@string/principal"
            android:textSize="15sp"
            android:textColor="@color/heavy_grey"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="去添加"
            android:textSize="14sp"
            android:textColor="@color/standard_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="12dp"
            android:src="@drawable/icon_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <com.hzjytech.operation.widgets.LinearLayout.LinearListView
        android:visibility="gone"
        android:id="@+id/ll_person_container"
        android:layout_marginTop="5dp"
        android:background="@color/standard_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/ll_cut_down_time"
            android:background="@color/standard_white"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp">
            <TextView
                android:text="截止日期"
                android:textSize="15sp"
                android:textColor="@color/heavy_grey"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_cut_down_time"
                android:text=""
                android:textSize="14sp"
                android:textColor="@color/standard_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_marginLeft="5dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/icon_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
           android:id="@+id/ll_click_add_comment"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:minHeight="200dp"
            android:orientation="vertical"
            android:background="@color/standard_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_click_add_comment"
                android:paddingTop="18dp"
                android:paddingLeft="12dp"
                android:textColor="@color/standard_black"
                android:textSize="14sp"
                android:hint="@string/click_add_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <android.support.v7.widget.RecyclerView
                android:layout_marginLeft="12dp"
                android:id="@+id/rv_new_comment_pic"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>